--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
           <button id="genera" class="btn btn-primary">Genera numeri</button>
         </div>
       </div>
-    
 
 
 
-  
+
+
       <div class="row p-4">
         <div class="col-6">
           <h1 id="timer">Timer: </h1>
@@ -41,26 +41,26 @@
           <h1 id="punteggio">Punteggio: </h1>
         </div>
       </div>
-   
 
-   
+
+
       <div class="row justify-content-center pt-4">
         <div class="col-12 text-center">
           <h1 id="numeriGenerati">Indovina questi numeri: </h1>
         </div>
-      <div class="col-6">
-        <div class="input-group mb-3">
-          <input id="input" type="text" class="form-control" placeholder="Ti ricordi i numeri?">
-          <button id="verifica" class="btn btn-success" type="button" id="button-addon2">Controlla</button>
+        <div class="col-12">
+          <div class="input-group mb-3">
+            <input id="input" type="text" class="form-control" placeholder="Ti ricordi i numeri?">
+            <button id="verifica" class="btn btn-success" type="button" id="button-addon2">Controlla</button>
+          </div>
         </div>
       </div>
-    </div>
-</div>
-  </div>
-  </div>
-  <div id="numeriCasuali">
+      <div class="row"></div>
 
+    </div>
   </div>
+  </div>
+
 
 
 
