some improvements: added check for victory

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <title>Simon Says</title>
 </head>
 
-<body class="d-flex justify-content-center align-items-center">
+<body class="m-auto p-5">
 
   <div id="app">
 
@@ -46,7 +46,8 @@
 
       <div class="row justify-content-center pt-4">
         <div class="col-12 text-center">
-          <h1 id="numeriGenerati">Indovina questi numeri: </h1>
+          <h1>Indovina questi numeri <p id="numeriGenerati"></p>
+          </h1>
         </div>
         <div class="col-12">
           <div class="input-group mb-3">
@@ -55,7 +56,11 @@
           </div>
         </div>
       </div>
-      <div class="row"></div>
+      <div class="row">
+        <div class="col-12">
+          <h1 id="error"></h1>
+        </div>
+      </div>
 
     </div>
   </div>
